Overflow problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   padding: 10px;
   z-index: 9;
   width: 10vw;
+  font-family: Bookman;
 }
 
 .nav-link {
