--- a/src/sections/Main.css
+++ b/src/sections/Main.css
@@ -65,6 +65,7 @@
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
+  font-family: Bookman;
   font-size: 20px;
   font-weight: bold;
   padding: 13px 32px;
