--- a/src/sections/Project.css
+++ b/src/sections/Project.css
@@ -99,12 +99,19 @@ img {
   gap: 1.5em;
   -webkit-transform: translateY(35%);
   transform: translateY(35%);
+  height: 55%;
+}
+
+.description-container {
+  position: absolute;
+  transform: translateY(55px);
+  height: 65%;
+  overflow: auto;
 }
 
 .description {
   margin-left: 10px;
   margin-right: 10px;
-  transform: translatey(-25%);
 }
 
 .back .project-links {
